<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <TextView
        android:text="Repo ID"
        android:layout_height="wrap_content"
        android:id="@+id/textView_id"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView_repoIdLabel"
        app:layout_constraintTop_toTopOf="@+id/textView_repoIdLabel"
        android:textColor="@color/colorPrimary"/>

    <ImageView
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView_ownerAvatar"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <TextView
        android:text="Repo Name"
        android:layout_height="wrap_content"
        android:id="@+id/textView_repoName"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView_repoNameLabel"
        app:layout_constraintTop_toTopOf="@+id/textView_repoNameLabel"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:text="@string/label_repo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_repoIdLabel"
        app:layout_constraintLeft_toRightOf="@+id/imageView_ownerAvatar"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:text="@string/label_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_repoNameLabel"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView_ownerAvatar"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_repoIdLabel"/>

    <TextView
        android:text="@string/label_repo_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_repoLanguageLabel"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_ownerAvatar"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_repoLanguage"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView_repoLanguageLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_ownerAvatar"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:text="@string/label_repo_updated_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_repoUpdatedLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_ownerAvatar"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView_repoLanguage"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_repoUpdatedAt"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_ownerAvatar"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView_repoUpdatedLabel"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:text="@string/label_repo_owner_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_repoOwnerLoginLabel"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView_id"
        app:layout_constraintTop_toTopOf="@+id/textView_repoIdLabel"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_repoOwnerLogin"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView_repoOwnerLoginLabel"
        app:layout_constraintTop_toTopOf="@+id/textView_repoIdLabel"
        android:textColor="@color/colorPrimary"/>

</android.support.constraint.ConstraintLayout>